[package]
name = "crates-io"
version = "0.40.5"
rust-version = "1.80"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Helpers for interacting with crates.io
"""

[lib]
name = "crates_io"
path = "lib.rs"

[dependencies]
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(all(target_os = "wasi", target_env = "p1")))'.dependencies]
curl.workspace = true

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dependencies]
fetch.workspace = true

[lints]
workspace = true
